--- a/lesson-8/index.html
+++ b/lesson-8/index.html
@@ -8,26 +8,44 @@
     <title>Lesson 8</title>
 </head>
 <body>
-<header>
+<header class="header">
     <div class="header-title">
         <h1>
             Homework 8
         </h1>
+        <div class="header-navigation-decor"></div>
     </div>
+    <div class="header-navigation-list">
+        <ul>
+            <li>
+                <a href="#first-block">Whitecollar</a>
+            </li>
+            <li>
+                <a href="#second-block">Project</a>
+            </li>
+            <li>
+                <a href="#third-block">Clothing online</a>
+            </li>
+            <li>
+                <a href="#fourth-block">We made</a>
+            </li>
+            <li>
+                <a href="#five-block">Down</a>
+            </li>
+        </ul>
+    </div>
+    <div class="header-decor"></div>
 </header>
 <main>
-    <div class="whitecollar-block">
+    <div class="whitecollar-block" id="first-block">
         <div class="whitecollar-block-container">
             <div class="whitecollar-title-block">
-                <div class="whitecollar-icons">
-                    <img src="img/icons/color-box.svg" alt="Whitecollar color box">
-                </div>
-                <h2>
-                    Welcome Whitecollar
-                </h2>
                 <h3>
-                    We Care About Your Business Plan.
+                    Welcome Whitecollar
                 </h3>
+                <h2>
+                    We Care About Your Business Plan.
+                </h2>
             </div>
             <div class="whitecollar-content-block">
                 <p>
@@ -43,47 +61,190 @@
                 <div class="whitecollar-content-two list">
                     <ul>
                         <li>
-                            <img src="img/icons/icon-check-mark.svg" alt="Icons check mark">
                             Components of a Business Strategy
                         </li>
                         <li>
-                            <img src="img/icons/icon-check-mark.svg" alt="Icons check mark">
                             Business Consulting
                         </li>
                     </ul>
                 </div>
                 <div class="whitecollar-content-two icon-box">
-                    <p>
-                        <img src="img/icons/icon-list.svg" alt="Icons with list">
-                        Experience
-                    </p>
-                    <p>
-                        Leverage frameworks toprovidee werment.
-                    </p>
-                </div>
-                <div class="whitecollar-content-two icon-box">
-                    <p>
-                        <img src="img/icons/icon-prize.svg" alt="Icons with prize">
-                        Awards Winner
-                    </p>
-                    <p>
-                        Leverage frameworks toprovidee werment.
-                    </p>
+                    <div class="whitecollar-icon-box-first">
+                        <div class="icon-box-first">
+                            <h3>
+                                Experience
+                            </h3>
+                            <p>
+                                Leverage frameworks toprovidee werment.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="whitecollar-icon-box-second">
+                        <div class="icon-box-second">
+                            <h3>
+                                Awards Winner
+                            </h3>
+                            <p>
+                                Leverage frameworks toprovidee werment.
+                            </p>
+                        </div>
+                    </div>
                 </div>
                 <div class="whitecollar-content-two link">
-                    <div class="link-container">
-                        <a href="#" target="_blank">More About Us</a>
+                    <a href="#" target="_blank">More About Us</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="project-block" id="second-block">
+        <div class="project-block-container">
+            <div class="project-title">
+                <h3>
+                    Latest Projects
+                </h3>
+                <h2>
+                    Discover our latest client projects
+                </h2>
+                <p>
+                    Leverage agile frameworks to provide a robust synopsis for high level overviews.Iterative approaches
+                    to corporate strategy foster collaborative thinking to further the overal.
+                </p>
+            </div>
+            <div class="project-content-row-up">
+                <div class="image-list image-first">
+                    <div class="images"></div>
+                    <h4>
+                        Financial Investment
+                    </h4>
+                    <div class="icon-calendar">
+                        Sep 2022
+                    </div>
+                </div>
+                <div class="image-list image-second">
+                    <div class="images"></div>
+                    <h4>
+                        Marketing Strategy
+                    </h4>
+                    <div class="icon-calendar">
+                        Sep 2022
+                    </div>
+                </div>
+                <div class="image-list image-third">
+                    <div class="images"></div>
+                    <h4>
+                        Business Consulting
+                    </h4>
+                    <div class="icon-calendar">
+                        Sep 2022
+                    </div>
+                </div>
+            </div>
+            <div class="project-content-row-down">
+                <div class="image-list image-fourth">
+                    <div class="images"></div>
+                    <h4>
+                        Financial Investment
+                    </h4>
+                    <div class="icon-calendar">
+                        Sep 2022
+                    </div>
+                </div>
+                <div class="image-list image-fives">
+                    <div class="images"></div>
+                    <h4>
+                        Web Development
+                    </h4>
+                    <div class="icon-calendar">
+                        Sep 2022
+                    </div>
+                </div>
+                <div class="image-list image-sixth">
+                    <div class="images"></div>
+                    <h4>
+                        Financial Investment
+                    </h4>
+                    <div class="icon-calendar">
+                        Sep 2022
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="block-decor-left"></div>
+    <div class="clothing-india-block" id="third-block">
+        <div class="clothing-india-container">
+            <div class="clothing-india-title">
+                <h3>
+                    Clothing for Women Online in India
+                </h3>
+            </div>
+            <div class="clothing-india-content">
+                <h4>
+                    Reexplore Women's Clothing Collection Online at Euphoria
+                </h4>
+                <p>
+                    Women's Clothing – Are you searching for the best website to buy Clothing for Women online in
+                    India? Well, your search for the coolest and most stylish womens clothing ends here. From trendy
+                    Casual Womens Wear Online shopping to premium quality cotton women's apparel,
+                    <span>Euphoria</span> has
+                    closet of Women Collection covered with the latest and best designs of Women's Clothing Online.
+                </p>
+                <p>
+                    Our collection of clothes for women will make you the trendsetter with an iconic resemblance of
+                    choice in Womens Wear.
+                </p>
+                <h4>
+                    One-Stop Destination to Shop Every Clothing for Women: Euphoria
+                </h4>
+                <p>
+                    Today, Clothing for Women is gaining more popularity above all. This is because gone are the
+                    days when women were used to carrying uncomfortable fashion. Today, a lady looks prettier when
+                    she is in Casual Womens Wear which is a comfortable outfit. Concerning this,
+                    <span>Euphoria</span> has a big
+                    fat range of Stylish Women's Clothing that would make her the winner wherever she goes.
+                </p>
+                <p>
+                    Our collection of clothes for women will make you the trendsetter with an iconic resemblance of
+                    choice in Womens Wear. It is quite evident to say that there are very few Womens Clothing online
+                    stores where you can buy Western Wear for Women comprising the premium material and elegant
+                    design that you are always seeking for. Basically,
+                </p>
+                <div class="clothing-india-link">
+                    <a href="#" target="_blank">See More</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="we-made-block" id="fourth-block">
+        <div class="we-made-container">
+            <div class="we-made-content">
+                <div class="we-made-left-part">
+                    <h3>
+                        WE MADE YOUR EVERYDAY FASHION BETTER!
+                    </h3>
+                    <p>
+                        In our journey to improve everyday fashion, euphoria presents EVERYDAY wear range - Comfortable
+                        &
+                        Affordable fashion 24/7
+                    </p>
+                    <a class="we-made-button" href="#" target="_blank">Shop Now</a>
+                </div>
+                <div class="we-made-right-part"></div>
+            </div>
+        </div>
+    </div>
+    <div class="example-part">
+        <div class="example-part-gradient"></div>
+        <div class="example-part-radial"></div>
+        <div class="example-part-img"></div>
+        <div class="footer-decor"></div>
+    </div>
 </main>
 <footer>
-    <div class="footer-title">
-        <h1>
-
-        </h1>
+    <div class="footer-title" id="five-block">
+        <h5>
+            Thanks for checking!
+        </h5>
     </div>
 </footer>
 </body>
