--- a/lesson-8/index.html
+++ b/lesson-8/index.html
@@ -30,7 +30,7 @@
                 <a href="#fourth-block">We made</a>
             </li>
             <li>
-                <a href="#five-block">Down</a>
+                <a href="#five-block">Example</a>
             </li>
         </ul>
     </div>
@@ -90,12 +90,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="whitecollar-content-two link">
-                    <a href="#" target="_blank">More About Us</a>
-                </div>
+                <a href="#" target="_blank">More About Us</a>
             </div>
         </div>
     </div>
+    <div class="block-decor-right"></div>
     <div class="project-block" id="second-block">
         <div class="project-block-container">
             <div class="project-title">
@@ -112,7 +111,7 @@
             </div>
             <div class="project-content-row-up">
                 <div class="image-list image-first">
-                    <div class="images"></div>
+                    <div class="image"></div>
                     <h4>
                         Financial Investment
                     </h4>
@@ -121,7 +120,7 @@
                     </div>
                 </div>
                 <div class="image-list image-second">
-                    <div class="images"></div>
+                    <div class="image"></div>
                     <h4>
                         Marketing Strategy
                     </h4>
@@ -130,7 +129,7 @@
                     </div>
                 </div>
                 <div class="image-list image-third">
-                    <div class="images"></div>
+                    <div class="image"></div>
                     <h4>
                         Business Consulting
                     </h4>
@@ -141,7 +140,7 @@
             </div>
             <div class="project-content-row-down">
                 <div class="image-list image-fourth">
-                    <div class="images"></div>
+                    <div class="image"></div>
                     <h4>
                         Financial Investment
                     </h4>
@@ -150,7 +149,7 @@
                     </div>
                 </div>
                 <div class="image-list image-fives">
-                    <div class="images"></div>
+                    <div class="image"></div>
                     <h4>
                         Web Development
                     </h4>
@@ -159,7 +158,7 @@
                     </div>
                 </div>
                 <div class="image-list image-sixth">
-                    <div class="images"></div>
+                    <div class="image"></div>
                     <h4>
                         Financial Investment
                     </h4>
@@ -227,25 +226,21 @@
                         &
                         Affordable fashion 24/7
                     </p>
-                    <a class="we-made-button" href="#" target="_blank">Shop Now</a>
+                    <a href="#" target="_blank">Shop Now</a>
                 </div>
                 <div class="we-made-right-part"></div>
             </div>
         </div>
     </div>
-    <div class="example-part">
+    <div class="example-part" id="five-block">
         <div class="example-part-gradient"></div>
         <div class="example-part-radial"></div>
-        <div class="example-part-img"></div>
-        <div class="footer-decor"></div>
+        <div class="example-part-x"></div>
     </div>
 </main>
 <footer>
-    <div class="footer-title" id="five-block">
-        <h5>
-            Thanks for checking!
-        </h5>
-    </div>
+    <div class="example-part-y"></div>
+    <div class="footer-title"></div>
 </footer>
 </body>
 </html>
