--- a/lesson-8/index.html
+++ b/lesson-8/index.html
@@ -112,27 +112,27 @@
             <div class="project-content-row-up">
                 <div class="image-list image-first">
                     <div class="image"></div>
-                    <h4>
+                    <a href="#" target="_blank">
                         Financial Investment
-                    </h4>
+                    </a>
                     <div class="icon-calendar">
                         Sep 2022
                     </div>
                 </div>
                 <div class="image-list image-second">
                     <div class="image"></div>
-                    <h4>
+                    <a href="#" target="_blank">
                         Marketing Strategy
-                    </h4>
+                    </a>
                     <div class="icon-calendar">
                         Sep 2022
                     </div>
                 </div>
                 <div class="image-list image-third">
                     <div class="image"></div>
-                    <h4>
+                    <a href="#" target="_blank">
                         Business Consulting
-                    </h4>
+                    </a>
                     <div class="icon-calendar">
                         Sep 2022
                     </div>
@@ -141,27 +141,27 @@
             <div class="project-content-row-down">
                 <div class="image-list image-fourth">
                     <div class="image"></div>
-                    <h4>
+                    <a href="#" target="_blank">
                         Financial Investment
-                    </h4>
+                    </a>
                     <div class="icon-calendar">
                         Sep 2022
                     </div>
                 </div>
                 <div class="image-list image-fives">
                     <div class="image"></div>
-                    <h4>
+                    <a href="#" target="_blank">
                         Web Development
-                    </h4>
+                    </a>
                     <div class="icon-calendar">
                         Sep 2022
                     </div>
                 </div>
                 <div class="image-list image-sixth">
                     <div class="image"></div>
-                    <h4>
+                    <a href="#" target="_blank">
                         Financial Investment
-                    </h4>
+                    </a>
                     <div class="icon-calendar">
                         Sep 2022
                     </div>
