--- a/lesson-8/index.html
+++ b/lesson-8/index.html
@@ -148,7 +148,7 @@
                         Sep 2022
                     </div>
                 </div>
-                <div class="image-list image-fives">
+                <div class="image-list image-fifth">
                     <div class="image"></div>
                     <a href="#" target="_blank">
                         Web Development
