--- a/lesson-9/index.html
+++ b/lesson-9/index.html
@@ -16,6 +16,129 @@
     </div>
 </header>
 <main>
+    <div class="practice-block">
+        <div class="practice-container">
+            <h2>
+                Псевдокласи стану: практика
+            </h2>
+            <div class="practice-part-one">
+                <ul class="practice-list">
+                    <li class="hover">
+                        <h4>
+                            :hover
+                        </h4>
+                        <p>
+                            О палмолів мій ніжний гель
+                        </p>
+                    </li>
+                    <li class="active">
+                        <h4>
+                            :active
+                        </h4>
+                        <p>
+                            О палмолів мій ніжний гель
+                        </p>
+                    </li>
+                    <li>
+                        <h4>
+                            :visited
+                        </h4>
+                        <ul class="visited-list">
+                            <li>
+                                <a class="visited" href="https://www.youtube.com/watch?v=LmGt3OXaH_I" target="_blank">О палмолів мій ніжний гель</a>
+                            </li>
+                            <li>
+                                <a class="visited" href="https://www.youtube.com/watch?v=VtN0GjGhlEM" target="_blank">О палмолів мій ніжний гель</a>
+                            </li>
+                            <li>
+                                <a class="visited" href="https://www.youtube.com/watch?v=5YtHPqHIaGI" target="_blank">О палмолів мій ніжний гель</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h4>
+                            :focus
+                        </h4>
+                        <a class="focus" href="#" target="_blank">О палмолів мій ніжний гель</a>
+                    </li>
+                    <li>
+                        <h4>
+                            :target
+                        </h4>
+                        <a href="#target" class="practice-link">Тиць</a>
+                        <div id="target" class="target">Дарує запах орхідей</div>
+                    </li>
+                </ul>
+            </div>
+            <h2>
+                Псевдокласи положення: практика
+            </h2>
+            <div class="practice-part-two child">
+                <p>
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                </p>
+                <p>
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель гель
+                </p>
+                <p>
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                </p>
+                <p>
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                </p>
+            </div>
+            <div class="practice-part-two type">
+                <p>
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                </p>
+                <span>
+                    Дарує запах орхідей
+                </span>
+                <p>
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель гель
+                </p>
+                <p>
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                </p>
+                <span>
+                    Дарує запах орхідей
+                </span>
+                <p>
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                </p>
+            </div>
+            <div class="practice-part-two ntn">
+                <p>
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                </p>
+                <p>
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель гель
+                </p>
+                <p>
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                </p>
+                <p>
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                </p>
+                <p>
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                    О палмолів мій ніжний гель О палмолів мій ніжний гель
+                </p>
+            </div>
+        </div>
+    </div>
     <div class="main-block-consulting">
         <div class="main-block-container">
             <div class="main-block-content text">
@@ -96,25 +219,29 @@
                     Leverage agile frameworks to provide a robust synopsis for high level overviews.Iterative approaches
                     to corporate strategy
                 </p>
-                <div class="whitecollar-content-list first">
-                    <h4>
-                        Our Vision
-                    </h4>
-                    <p>
-                        Capitalize on low hanging fruit to identify a ballpark value added activity to beta
-                        clickthroughs.
-                    </p>
-                </div>
-                <div class="whitecollar-content-list second">
-                    <h4>
-                        Our Mision
-                    </h4>
-                    <p>
-                        Podcasting operational change management inside of workflows to establish a framework.
-                    </p>
-                </div>
-                <a class="whitecollar-button" href="#" target="_blank">More About Us</a>
             </div>
+            <div class="whitecollar-content-list">
+                <ul>
+                    <li>
+                        <h4>
+                            Our Vision
+                        </h4>
+                        <p>
+                            Capitalize on low hanging fruit to identify a ballpark value added activity to beta
+                            clickthroughs.
+                        </p>
+                    </li>
+                    <li>
+                        <h4>
+                            Our Mision
+                        </h4>
+                        <p>
+                            Podcasting operational change management inside of workflows to establish a framework.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+            <a class="whitecollar-button" href="#" target="_blank">More About Us</a>
         </div>
     </div>
     <div class="jewellery-block">
@@ -168,46 +295,64 @@
             </div>
             <div class="work-cards-block">
                 <div class="work-cards first-card">
-                    <h4>
-                        Make Appointment
-                    </h4>
-                    <p>
-                        Leverage agile frameworks provide
-                        synopsishigh level overviews
-                        value proposition.
-                    </p>
-                    <a class="work-card-link" href="#" target="_blank">Testimonials</a>
+                    <div class="work-cards-content">
+                        <h4>
+                            Make Appointment
+                        </h4>
+                        <p>
+                            Leverage agile frameworks provide
+                            synopsishigh level overviews
+                            value proposition.
+                        </p>
+                        <a class="work-card-link" href="#" target="_blank">Testimonials</a>
+                    </div>
                 </div>
                 <div class="work-cards second-card">
-                    <h4>
-                        Consultation
-                    </h4>
-                    <p>
-                        Leverage agile frameworks provide
-                        synopsishigh level overviews
-                        value proposition.
-                    </p>
-                    <a class="work-card-link" href="#" target="_blank">Testimonials</a>
+                    <div class="work-cards-content">
+                        <h4>
+                            Consultation
+                        </h4>
+                        <p>
+                            Leverage agile frameworks provide
+                            synopsishigh level overviews
+                            value proposition.
+                        </p>
+                        <a class="work-card-link" href="#" target="_blank">Testimonials</a>
+                    </div>
                 </div>
                 <div class="work-cards third-card">
-                    <h4>
-                        Enjoy the Service
-                    </h4>
-                    <p>
-                        Leverage agile frameworks provide
-                        synopsishigh level overviews
-                        value proposition.
-                    </p>
-                    <a class="work-card-link" href="#" target="_blank">Testimonials</a>
+                    <div class="work-cards-content">
+                        <h4>
+                            Enjoy the Service
+                        </h4>
+                        <p>
+                            Leverage agile frameworks provide
+                            synopsishigh level overviews
+                            value proposition.
+                        </p>
+                        <a class="work-card-link" href="#" target="_blank">Testimonials</a>
+                    </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="game-block">
+        <div class="game-container">
+            <div class="game-start">START</div>
+                <div class="game-line-1 class"></div>
+                <div class="game-line-2 class"></div>
+                <div class="game-line-3 class"></div>
+                <div class="game-line-4 class"></div>
+                <div class="game-line-5 class"></div>
+                <div class="game-line-6 class"></div>
+                <div class="game-line-finish class"></div>
         </div>
     </div>
 </main>
 <footer>
     <div class="footer-title">
         <h6>
-            Hello world
+            Homework finish. Thanks for checking!
         </h6>
     </div>
 </footer>
