--- a/lesson-9/index.html
+++ b/lesson-9/index.html
@@ -45,13 +45,19 @@
                         </h4>
                         <ul class="visited-list">
                             <li>
-                                <a class="visited" href="https://www.youtube.com/watch?v=LmGt3OXaH_I" target="_blank">О палмолів мій ніжний гель</a>
+                                <a class="visited" href="https://www.youtube.com/watch?v=3Q9DRnFBwWA" target="_blank">Обережно, я звукова доріжка</a>
                             </li>
                             <li>
-                                <a class="visited" href="https://www.youtube.com/watch?v=VtN0GjGhlEM" target="_blank">О палмолів мій ніжний гель</a>
+                                <a class="visited" href="https://www.youtube.com/watch?v=Yk5VFmYzZeU" target="_blank">Обережно, я теж звукова доріжка</a>
                             </li>
                             <li>
-                                <a class="visited" href="https://www.youtube.com/watch?v=5YtHPqHIaGI" target="_blank">О палмолів мій ніжний гель</a>
+                                <a class="visited" href="https://www.youtube.com/watch?v=9KDly8yMftM" target="_blank">Нічого собі, і це звукова доріжка!</a>
+                            </li>
+                            <li>
+                                <a class="visited" href="https://www.youtube.com/watch?v=2fhgiW4j2VE" target="_blank">Раз усі звукові доріжки, то і я буду</a>
+                            </li>
+                            <li>
+                                <a class="visited" href="https://www.youtube.com/watch?v=Vpw_SJhZ-uY" target="_blank">А я не така як всі - я ще й відео показую</a>
                             </li>
                         </ul>
                     </li>
