--- a/lesson-9/index.html
+++ b/lesson-9/index.html
@@ -48,13 +48,13 @@
                                 <a class="visited" href="https://www.youtube.com/watch?v=3Q9DRnFBwWA" target="_blank">Обережно, я звукова доріжка</a>
                             </li>
                             <li>
-                                <a class="visited" href="https://www.youtube.com/watch?v=Yk5VFmYzZeU" target="_blank">Обережно, я теж звукова доріжка</a>
+                                <a class="visited" href="https://www.youtube.com/watch?v=OpFd8F8po9M" target="_blank">Обережно, я теж звукова доріжка</a>
                             </li>
                             <li>
                                 <a class="visited" href="https://www.youtube.com/watch?v=9KDly8yMftM" target="_blank">Нічого собі, і це звукова доріжка!</a>
                             </li>
                             <li>
-                                <a class="visited" href="https://www.youtube.com/watch?v=2fhgiW4j2VE" target="_blank">Раз усі звукові доріжки, то і я буду</a>
+                                <a class="visited" href="https://www.youtube.com/watch?v=P_pdqf2TcT0" target="_blank">Раз усі звукові доріжки, то і я буду</a>
                             </li>
                             <li>
                                 <a class="visited" href="https://www.youtube.com/watch?v=Vpw_SJhZ-uY" target="_blank">А я не така як всі - я ще й відео показую</a>
