--- a/lesson-10/index.html
+++ b/lesson-10/index.html
@@ -16,7 +16,7 @@
     </div>
 </header>
 <main>
-    <div class="vector-icon-block block">
+    <div class="vector-icon-block">
         <h2>
             Vector, icon, svg
         </h2>
@@ -32,7 +32,7 @@
         <img src="img/icon/vector-checkmark-blue.svg" alt="Icon, color checkmark">
         <img src="img/icon/vector-checkmark-green.svg" alt="Icon, color checkmark">
     </div>
-    <div class="vector-content-block block">
+    <div class="vector-content-block">
         <h2>
             Vector, content, svg
         </h2>
@@ -54,7 +54,7 @@
         <img src="img/content/vector-brand.svg" alt="Icon, logo Brand">
 
     </div>
-    <div class="raster-content-block block">
+    <div class="raster-content-block">
         <h2>
             Raster, content, webp
         </h2>
