--- a/lesson-10/index.html
+++ b/lesson-10/index.html
@@ -55,10 +55,10 @@
     </div>
     <div class="raster-content-block">
         <h2>
-            Raster, content, webp
+            Raster, content
         </h2>
         <p>
-            (from jpeg to webp format and optimized on <a href="https://tinypng.com/" target="_blank">tinypng.com</a>)
+            (converted from jpg to webp format and optimized on <a href="https://tinypng.com/" target="_blank">tinypng.com</a>)
         </p>
         <img src="img/raster/whitecollar-more-people.webp" alt="whitecollar picture with more people">
         <img src="img/raster/whitecollar-people-1.webp" alt="whitecollar picture with people">
