--- a/lesson-11/index.html
+++ b/lesson-11/index.html
@@ -535,7 +535,7 @@
                 </li>
                 <li class="list-social__item link-social">
                     <a href="#" class="link-social__link">
-                        in
+                        <img src="img/icon/icon-in.svg" alt="Social media LinkedIn">
                     </a>
                 </li>
             </ul>
